changement de titre

--- a/WFP Project-checkpoint.ipynb
+++ b/WFP Project-checkpoint.ipynb
@@ -2108,11 +2108,7 @@
    "cell_type": "markdown",
    "id": "de30e960-baee-4bcc-85aa-f06e8ab42bf1",
    "metadata": {},
-   "source": [
-    "### TODO : \n",
-    "- Change types of columns\n",
-    "- Remove outliers"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2365,307 +2361,6 @@
     "    return df.drop(idx)\n",
     "\n",
     "df = remove_outlier(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2bdc6aa9-3f64-4e3f-babf-defbbe59626a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>countryname</th>\n",
-       "      <th>adminone</th>\n",
-       "      <th>adminlevel</th>\n",
-       "      <th>population</th>\n",
-       "      <th>date</th>\n",
-       "      <th>datatype</th>\n",
-       "      <th>fcs people</th>\n",
-       "      <th>fcs prevalence</th>\n",
-       "      <th>rcsi people</th>\n",
-       "      <th>rcsi prevalence</th>\n",
-       "      <th>health access people</th>\n",
-       "      <th>health access prevalence</th>\n",
-       "      <th>market access people</th>\n",
-       "      <th>market access prevalence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>country</td>\n",
-       "      <td>national</td>\n",
-       "      <td>2.625131e+07</td>\n",
-       "      <td>2024-03-04</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>8456947</td>\n",
-       "      <td>0.322153</td>\n",
-       "      <td>7816509</td>\n",
-       "      <td>0.297757</td>\n",
-       "      <td>2155430</td>\n",
-       "      <td>0.082108</td>\n",
-       "      <td>3180077</td>\n",
-       "      <td>0.121140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>country</td>\n",
-       "      <td>national</td>\n",
-       "      <td>2.625131e+07</td>\n",
-       "      <td>2024-03-03</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>8604019</td>\n",
-       "      <td>0.327756</td>\n",
-       "      <td>7708249</td>\n",
-       "      <td>0.293633</td>\n",
-       "      <td>2185552</td>\n",
-       "      <td>0.083255</td>\n",
-       "      <td>3222276</td>\n",
-       "      <td>0.122747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>country</td>\n",
-       "      <td>national</td>\n",
-       "      <td>2.625131e+07</td>\n",
-       "      <td>2024-03-02</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>8654571</td>\n",
-       "      <td>0.329681</td>\n",
-       "      <td>7845463</td>\n",
-       "      <td>0.298860</td>\n",
-       "      <td>2227397</td>\n",
-       "      <td>0.084849</td>\n",
-       "      <td>3284548</td>\n",
-       "      <td>0.125119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>country</td>\n",
-       "      <td>national</td>\n",
-       "      <td>2.625131e+07</td>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>8597649</td>\n",
-       "      <td>0.327513</td>\n",
-       "      <td>7748351</td>\n",
-       "      <td>0.295161</td>\n",
-       "      <td>2175090</td>\n",
-       "      <td>0.082856</td>\n",
-       "      <td>3330646</td>\n",
-       "      <td>0.126875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>country</td>\n",
-       "      <td>national</td>\n",
-       "      <td>2.625131e+07</td>\n",
-       "      <td>2024-02-29</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>8578497</td>\n",
-       "      <td>0.326784</td>\n",
-       "      <td>7827478</td>\n",
-       "      <td>0.298175</td>\n",
-       "      <td>2126254</td>\n",
-       "      <td>0.080996</td>\n",
-       "      <td>3322466</td>\n",
-       "      <td>0.126564</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1377</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>Menabe</td>\n",
-       "      <td>subnational</td>\n",
-       "      <td>7.116390e+05</td>\n",
-       "      <td>2024-01-05</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>99807</td>\n",
-       "      <td>0.140249</td>\n",
-       "      <td>178358</td>\n",
-       "      <td>0.250630</td>\n",
-       "      <td>71084</td>\n",
-       "      <td>0.099888</td>\n",
-       "      <td>91533</td>\n",
-       "      <td>0.128623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1378</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>Sava</td>\n",
-       "      <td>subnational</td>\n",
-       "      <td>1.178796e+06</td>\n",
-       "      <td>2024-01-05</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>477003</td>\n",
-       "      <td>0.404653</td>\n",
-       "      <td>253350</td>\n",
-       "      <td>0.214923</td>\n",
-       "      <td>158273</td>\n",
-       "      <td>0.134267</td>\n",
-       "      <td>144382</td>\n",
-       "      <td>0.122483</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1379</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>Sofia</td>\n",
-       "      <td>subnational</td>\n",
-       "      <td>1.498769e+06</td>\n",
-       "      <td>2024-01-05</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>468533</td>\n",
-       "      <td>0.312612</td>\n",
-       "      <td>336681</td>\n",
-       "      <td>0.224638</td>\n",
-       "      <td>99133</td>\n",
-       "      <td>0.066143</td>\n",
-       "      <td>229278</td>\n",
-       "      <td>0.152978</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1380</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>Vakinankaratra</td>\n",
-       "      <td>subnational</td>\n",
-       "      <td>2.167330e+06</td>\n",
-       "      <td>2024-01-05</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>891656</td>\n",
-       "      <td>0.411408</td>\n",
-       "      <td>662316</td>\n",
-       "      <td>0.305591</td>\n",
-       "      <td>229429</td>\n",
-       "      <td>0.105858</td>\n",
-       "      <td>327763</td>\n",
-       "      <td>0.151229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1381</th>\n",
-       "      <td>Madagascar</td>\n",
-       "      <td>Vatovavy Fitovinany</td>\n",
-       "      <td>subnational</td>\n",
-       "      <td>1.702391e+06</td>\n",
-       "      <td>2024-01-05</td>\n",
-       "      <td>SURVEY</td>\n",
-       "      <td>758607</td>\n",
-       "      <td>0.445613</td>\n",
-       "      <td>492093</td>\n",
-       "      <td>0.289060</td>\n",
-       "      <td>230083</td>\n",
-       "      <td>0.135153</td>\n",
-       "      <td>217013</td>\n",
-       "      <td>0.127475</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1380 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     countryname             adminone   adminlevel    population       date  \\\n",
-       "1     Madagascar              country     national  2.625131e+07 2024-03-04   \n",
-       "2     Madagascar              country     national  2.625131e+07 2024-03-03   \n",
-       "3     Madagascar              country     national  2.625131e+07 2024-03-02   \n",
-       "4     Madagascar              country     national  2.625131e+07 2024-03-01   \n",
-       "5     Madagascar              country     national  2.625131e+07 2024-02-29   \n",
-       "...          ...                  ...          ...           ...        ...   \n",
-       "1377  Madagascar               Menabe  subnational  7.116390e+05 2024-01-05   \n",
-       "1378  Madagascar                 Sava  subnational  1.178796e+06 2024-01-05   \n",
-       "1379  Madagascar                Sofia  subnational  1.498769e+06 2024-01-05   \n",
-       "1380  Madagascar       Vakinankaratra  subnational  2.167330e+06 2024-01-05   \n",
-       "1381  Madagascar  Vatovavy Fitovinany  subnational  1.702391e+06 2024-01-05   \n",
-       "\n",
-       "     datatype  fcs people  fcs prevalence  rcsi people  rcsi prevalence  \\\n",
-       "1      SURVEY     8456947        0.322153      7816509         0.297757   \n",
-       "2      SURVEY     8604019        0.327756      7708249         0.293633   \n",
-       "3      SURVEY     8654571        0.329681      7845463         0.298860   \n",
-       "4      SURVEY     8597649        0.327513      7748351         0.295161   \n",
-       "5      SURVEY     8578497        0.326784      7827478         0.298175   \n",
-       "...       ...         ...             ...          ...              ...   \n",
-       "1377   SURVEY       99807        0.140249       178358         0.250630   \n",
-       "1378   SURVEY      477003        0.404653       253350         0.214923   \n",
-       "1379   SURVEY      468533        0.312612       336681         0.224638   \n",
-       "1380   SURVEY      891656        0.411408       662316         0.305591   \n",
-       "1381   SURVEY      758607        0.445613       492093         0.289060   \n",
-       "\n",
-       "      health access people  health access prevalence  market access people  \\\n",
-       "1                  2155430                  0.082108               3180077   \n",
-       "2                  2185552                  0.083255               3222276   \n",
-       "3                  2227397                  0.084849               3284548   \n",
-       "4                  2175090                  0.082856               3330646   \n",
-       "5                  2126254                  0.080996               3322466   \n",
-       "...                    ...                       ...                   ...   \n",
-       "1377                 71084                  0.099888                 91533   \n",
-       "1378                158273                  0.134267                144382   \n",
-       "1379                 99133                  0.066143                229278   \n",
-       "1380                229429                  0.105858                327763   \n",
-       "1381                230083                  0.135153                217013   \n",
-       "\n",
-       "      market access prevalence  \n",
-       "1                     0.121140  \n",
-       "2                     0.122747  \n",
-       "3                     0.125119  \n",
-       "4                     0.126875  \n",
-       "5                     0.126564  \n",
-       "...                        ...  \n",
-       "1377                  0.128623  \n",
-       "1378                  0.122483  \n",
-       "1379                  0.152978  \n",
-       "1380                  0.151229  \n",
-       "1381                  0.127475  \n",
-       "\n",
-       "[1380 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
@@ -5748,7 +5443,7 @@
    "id": "dee560df",
    "metadata": {},
    "source": [
-    "2. Data clustering"
+    "2. Data clustering using data transformation techniques (Standardization)"
    ]
   },
   {
