add dropdowns for clusters

--- a/WFP v2.ipynb
+++ b/WFP v2.ipynb
@@ -11370,7 +11370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "6c155607-73a6-4538-b761-6e2cc03ecdb5",
    "metadata": {},
    "outputs": [
@@ -12273,14 +12273,14 @@
     "    \"market access prevalence\"\n",
     "]\n",
     "\n",
-    "fig = px.imshow(\n",
+    "fig_corr = px.imshow(\n",
     "    df_avg[cols_prev].corr(),\n",
     "    text_auto=True,\n",
     "    color_continuous_scale=\"RdBu_r\",\n",
     "    title=\"Corrélation between prevalance\"\n",
     ")\n",
-    "fig.update_layout(width=900, height=900)\n",
-    "fig.show()\n",
+    "fig_corr.update_layout(width=900, height=900)\n",
+    "fig_corr.show()\n",
     "\n"
    ]
   },
@@ -12308,7 +12308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "8889f92e-b82a-425a-aea9-8e200b4370e3",
    "metadata": {},
    "outputs": [
@@ -13259,7 +13259,7 @@
     "\n",
     "    # 1 — Grouping Query\n",
     "    html.H2(\"1. FCS Grouping Query Result\"),\n",
-    "    dcc.Graph(figure=avg_fcs_people(df)),\n",
+    "    dcc.Graph(figure=fig_corr),\n",
     "\n",
     "    # 2 — Cluster Visualizations\n",
     "    html.H2(\"6. Cluster Profiles\"),\n",
